2005/06/20	kaffeetisch

	* xs/GtkPaned.xs: Fix the child aliases to have unique ids to hush
	warnings from newer ExtUtils::ParseXS versions.

2005/06/20	kaffeetisch

	* t/GtkTreeView.t: Make sure we only enter the row separator
	callback once to make this test more robust.

	* xs/GdkPixbuf.xs: Escape ">" in the POD for
	gdk_pixbuf_format_set_disabled.

2005/06/16	muppetman

	* pm/SimpleList.pm:  Don't trap the model in closures and signal
	handler data.  This makes it possible to change the SimpleList's
	model without breaking editable renderers.  This isn't a complete
	solution, but is cleaner even by itself.

2005/06/07	muppetman

	* xs/GnomeAboutDialog.xs: Actually store the instances created by
	Gtk2::show_about_dialog(), so that they can be reused.

	* xs/GtkComboBox.xs, xs/GtkComboBoxEntry.xs, xs/GtkDialog.xs,
	xs/GtkList.xs, xs/GtkListItem.xs, xs/GtkMessageDialog.xs: Add or
	beef up a few synopsis and description sections.

2005/06/06	kaffeetisch

	* Gtk2.pm, META.yml, Makefile.PL, NEWS, README: Unstable release
	1.091.

2005/06/03	kaffeetisch

	* t/GtkFileChooserButton.t: Use "open" instead of "save" for the
	dialog since the button doesn't support "save".

2005/04/25	kaffeetisch

	* Gtk2.pm, Makefile.PL, META.yml, NEWS, README: Unstable release
	1.090.

2005/04/25	kaffeetisch

	* CodeGen.pm: Add const typemaps for object types.

	* t/GtkFileChooser.t: Skip this test completely as it's failing.

	* t/GtkAccelMap.t, t/GtkAccelGroup.t, t/GtkStock.t: Remove some
	TODO block since the relevant Test::More bug has been fixed.

	* gdk.typemap, maps-2.6, t/GdkPixbuf.t, xs/GdkPixbuf.xs: Bind and
	test gdk_pixbuf_new_from_file_at_scale, gdk_pixbuf_rotate_simple,
	gdk_pixbuf_flip, gdk_pixbuf_get_file_info, the new GdkPixbufFormat
	members and gdk_pixbuf_format_set_disabled.

	* t/GtkDnd.t, xs/GtkDnd.xs, xs/GtkNotebook.xs: Merge from
	stable-1-08: Update copyright disclaimers.

	* xs/GtkRadioAction.xs, xs/GtkToggleAction.xs: Add synopsis